--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "topeka",
+    "name": "John",
     "version": "0.5.0",
-    "description": "Topeka Quiz app",
+    "description": "Johns Quiz app",
     "repository": {
       "type": "git",
       "url": "https://github.com/johnobassy/sample-quiz-app"
@@ -11,7 +11,6 @@
       "url": "https://github.com/Polymer/topeka/issues"
     },
     "devDependencies": {
-      "crisper": "^1.0.4",
-      "vulcanize": "^0.7.10"
+
     }
   }
